--- a/html-css/01-introducao.html
+++ b/html-css/01-introducao.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<head>
 		<title>Título da página exibido no navegador</title>
 	</head>
