--- a/html-css/04-tabelas.html
+++ b/html-css/04-tabelas.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>HTML - Tabelas</title>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Tabelas</title>
 	</head>
 	<body>
 
