adicionando validacoes formulario

--- a/JavaScript/Formulario.html
+++ b/JavaScript/Formulario.html
@@ -13,22 +13,15 @@
     <div class="container">
 
         <div class="mensagem"></div>
-        
-        <form id="formulario-01">
-            <h2>Cálculo de média</h2>
-            <p>Preencha as notas de 0 à 10</p>
-            <input type="text" placeholder="Dígite um número" class ="numero" name="n1"><br>
-            <input type="text" placeholder="Dígite um número" class ="numero" name="n2"><br>
-            <input type="text" placeholder="Dígite um número" class ="numero" name="n3"><br>
-            <input type="text" placeholder="Dígite um número" class ="numero" name="n4"><br>
-            <button type="submit">Enviar</button>
-        </form>
 
         <form id="formulario-02">
             <h2>Faça seu cadastro</h2>
             <input type="text" placeholder="Dígite seu nome" class ="obrigatorio " name="nome"><br>
-            <input type="text" placeholder="Dígite seu email" class ="obrigatorio " name="email"><br>
+            <input type="text" placeholder="Dígite seu email" class ="email " name="email"><br>
             <input type="text" placeholder="Dígite seu telefone" name="telefone"><br>
+            <input type="text" placeholder="Dígite seu cep" class="numerico" name="cep"><br>
+            <input type="text" placeholder="Dígite seu Cidade" class="obrigatorio" name="Cidade"><br>
+            <input type="text" placeholder="Dígite seu UF" class="uf" name="UF"><br>
             <button type="submit">Enviar</button>
         </form>
 
